# ALIA-demo-patrimonio

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  CHUNKS_VERSIONS.md  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0691450af90f_add_query_text_and_municipality_to_.py  10ea8c52cb35_create_all_tables.py  17bdc32dc6df_create_user_feedback_table.py  9af948ad6c54_add_introduction_and_conclusion_to_.py  a1b2c3d4e5f6_create_document_chunks_v3_with_metadata.py  (+12 more)
backend/config/: .env.example
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md  CHUNKS_VERSIONS.md  CLOUD_RUN_DEPLOYMENT.md  DATABASE_BACKUP.md  DATA_MODEL.md  EDA_DBPEDIA_IAPH.md  EDA_IAPH_DATA.md  EMBEDDING_PERFORMANCE.md  HERITAGE_API.md  LLM_ENGINES.md  LLM_QUANTIZATION_GUIDE.md  LLM_SERVICE.md  QWEN3_EMBEDDING_DIAGNOSTICO.md  RAG_PIPELINE.md  ROUTE_PIPELINE.md  SCORING_VERSIONS.md  USER_MANAGEMENT.md
backend/scripts/: analyze_feedback.py  analyze_queries.py  benchmark_embedding.py  benchmark_retrieval.py  create_test_table.py  db_backup.sh  download_alia_gguf.sh  download_alia_gptq.sh  download_qwen3.sh  download_reranker.sh  download_salamandra.sh  download_sinai_embedding.sh  download_sinai_reranker.sh  eda_dbpedia.py  eda_dbpedia_lookup.py  embedding_diagnostics.py  fetch_iaph_api.py  ingest.py  load_api_assets.py  manage_users.py
backend/src/: config.py  logging_config.py  main.py
(+383 files in other folders)
