[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.7.2",
    "pandas>=3.0.1",
    "pgvector>=0.4.2",
    "pyjwt>=2.8.0",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.41.0",
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
gcp = ["google-auth>=2.20.0", "requests>=2.20.0"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

[tool.alembic]
script_location = "alembic"
